[package]
edition = "2018"
name = "tg-url-sanitizer"
version = "0.0.1"

[[bin]]
name = "tg-url-sanitizer"
path = "src/main.rs"

[workspace]

[dependencies]
url-sanitizer = { path = "url-sanitizer" }

teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
